# Shooting-Range

./: CMakeLists.txt  README.md  conanfile.txt
include/: Cube.h  Player.h  Window.h
include/console/: Command.h  Console.h  Interpreter.h
include/console/imgui/: imgui_impl_opengl3.h
include/game/: Game.h  Gun.h  Player.h  Scene.h
include/handlers/: ConfigurationHandler.h  CubeHandler.h  InputHandler.h  ShaderHandler.h
rsc/shaders/: fragment.glsl  vertex.glsl
src/: Cube.cpp  Player.cpp  Window.cpp  main.cpp
src/console/: Command.cpp  Console.cpp  Interpreter.cpp
src/console/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/game/: Game.cpp  Gun.cpp  Player.cpp  Scene.cpp
src/handlers/: ConfigurationHandler.cpp  CubeHandler.cpp  InputHandler.cpp  ShaderHandler.cpp
